# Central-Valley-Supercommuter-Problem

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
api/: __init__.py  main.py
api/routes/: __init__.py  baseline.py  scenarios.py
core/: __init__.py  accessibility.py  diff.py  equity.py
core/routing/: __init__.py  catalog.py  engine.py  scenarios.py
docs/: methodology.md  plan.md
pipeline/: __init__.py  build_baseline.py  build_scenarios.py  config.py  load.py
pipeline/sources/: __init__.py  acs.py  gtfs.py  lodes.py  osm.py  tracts.py
prototype/: map.html
repositories/: __init__.py  base.py  files.py  postgres.py
tests/: test_api.py  test_core.py  test_scenarios.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DiffPanel.tsx  EquitySliders.tsx  Map.tsx  ScenarioPanel.tsx
web/src/lib/: api.ts  equity.ts  metrics.ts
