[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "altamont"
version = "0.1.0"
description = "Transit-equity scenario tool for San Joaquin County super-commuters, built on Conveyal R5 via r5py"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
pipeline = [
    "pandas>=2.2",
    "geopandas>=1.0",
    "pyarrow>=16",
    "requests>=2.32",
    "shapely>=2.0",
    "osmium>=3.7",
]
routing = [
    "r5py>=1.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["api*", "core*", "pipeline*", "repositories*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
